pavucontrol: persistent storage of default/fallback input device is only updated when the output device is configured
Warning
Missing data may cause bugs to languish.
Summary
see title ^
environment
Unless you are sure its not relevant please attach files for each command.
uname -a
aplay -l
arecord -l
pactl info
pactl list
pulseaudio --version pulseaudio 11.0-22-g4904d-dirty
Steps to reproduce
open an instance of pavucontrol
open a terminal window
tile the desktop so that both are visible
run this command in the terminal watch -d -n1 cat ~/.config/pulse/*t-s*
navigate to the input devices tab in pavucontrol
configure one of the input devices as default/fallback
watch the terminal window for ~10 seconds
note: that the default sink and source do not change in the terminal window
navigate to the output devices tab in pavucontrol
configure one of the output devices as default/fallback
watch the terminal window for ~10 seconds
note: that the default sink AND source get updated
What is the current bug behavior?
the persistent storage of the default source is not updated until the default sink is configured
What is the expected correct behavior?
the peristent storage of the default source preference should be updated within ~10 seconds of checking the fallback button on the input device